Allow completing todos.
